<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.baking.Fragments.StepFragment">

    <ImageView
        android:id="@+id/step_ImageView"
        android:layout_weight="1.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />
    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        app:resize_mode="fill" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView_StepFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textSize="18sp"
            android:typeface="monospace"
            tools:targetApi="jelly_bean"
            tools:text="dnssdnfsdfnsdfnsdfnsfkdsnf" />
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/back_fragmentStep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/skip_to_previous"
            android:textSize="24sp"
            android:visibility="visible"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/Next_fragmentStep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/skip_to_next"
            android:textSize="24sp"
            android:visibility="gone"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>