<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/activity_layout"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.baking.MainActivity">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_MainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
